--- a/debian/control
+++ b/debian/control
@@ -1,5 +1,5 @@
 Source: bubblewrap
-Section: web
+Section: admin
 Priority: extra
 Maintainer: Laszlo Boszormenyi (GCS) <gcs@debian.org>
 Build-Depends: debhelper (>= 9), dh-autoreconf, pkg-config, libselinux1-dev (>= 2.1.9), libcap-dev, bash-completion, xsltproc, docbook-xsl
