--- a/debian/control
+++ b/debian/control
@@ -2,6 +2,7 @@ Source: bubblewrap
 Section: admin
 Priority: optional
 Maintainer: Laszlo Boszormenyi (GCS) <gcs@debian.org>
+Uploaders: Simon McVittie <smcv@debian.org>
 Build-Depends: debhelper (>= 9), dh-autoreconf, pkg-config, libselinux1-dev (>= 2.1.9), libcap-dev, bash-completion, xsltproc, docbook-xsl
 Standards-Version: 3.9.8
 Homepage: https://github.com/projectatomic/bubblewrap
