--- a/debian/control
+++ b/debian/control
@@ -15,6 +15,8 @@ Build-Depends:
  xsltproc,
 Standards-Version: 3.9.8
 Homepage: https://github.com/projectatomic/bubblewrap
+Vcs-Git: https://anonscm.debian.org/git/collab-maint/bubblewrap.git
+Vcs-Browser: https://anonscm.debian.org/cgit/collab-maint/bubblewrap.git
 
 Package: bubblewrap
 Architecture: linux-any
