Hardening: build as a position-independent executable with eager symbol binding

--- a/debian/rules
+++ b/debian/rules
@@ -1,6 +1,8 @@
 #!/usr/bin/make -f
 # -*- makefile -*-
 
+export DEB_BUILD_MAINT_OPTIONS = hardening=+pie,+bindnow
+
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
 
