d/rules: Do not enable setuid mode at configure time
If we do, we can't run the build-time tests, and it no longer makes any
difference to the actual code. Make the executable setuid via
debian/rules instead.

--- a/debian/rules
+++ b/debian/rules
@@ -8,14 +8,12 @@ export DEB_BUILD_MAINT_OPTIONS = hardening=+pie,+bindnow
 
 PKGDIR=$(CURDIR)/debian/bubblewrap
 
-override_dh_auto_configure:
-	dh_auto_configure -- --with-priv-mode=setuid
-
 override_dh_fixperms:
 	chmod a+x $(PKGDIR)/usr/share/bash-completion/completions/bwrap
+	chmod 04755 $(PKGDIR)/usr/bin/bwrap
 	dh_fixperms -Xbin/bwrap
 
 %:
 	dh $@ --parallel --with autoreconf
 
-.PHONY: override_dh_auto_configure override_dh_fixperms
+.PHONY: override_dh_fixperms
