d/tests/*: only run tests on a real or virtual machine, not in a container
bubblewrap is effectively already a container, and nesting containers
doesn't work particularly well. Unfortunately this means the tests won't
work on ci.debian.net, which uses LXC.

--- a/debian/tests/control
+++ b/debian/tests/control
@@ -2,12 +2,14 @@ Tests:
  basic
  dev
  userns
+Restrictions: isolation-machine
 Depends:
  bats,
  bubblewrap,
 
 Tests:
  net
+Restrictions: isolation-machine
 Depends:
  bats,
  bubblewrap,
@@ -15,6 +17,6 @@ Depends:
 
 Tests:
  upstream
-Restrictions: allow-stderr
+Restrictions: allow-stderr, isolation-machine
 Depends:
  bubblewrap,
