Remove Maintainer status from Laszlo Boszormenyi at his request
Add him to Uploaders instead, and hand the package over to the Utopia
Maintenance Team (the same as OSTree and Flatpak).

--- a/debian/control
+++ b/debian/control
@@ -1,8 +1,9 @@
 Source: bubblewrap
 Section: admin
 Priority: optional
-Maintainer: Laszlo Boszormenyi (GCS) <gcs@debian.org>
+Maintainer: Utopia Maintenance Team <pkg-utopia-maintainers@lists.alioth.debian.org>
 Uploaders:
+ Laszlo Boszormenyi (GCS) <gcs@debian.org>,
  Simon McVittie <smcv@debian.org>,
 Build-Depends:
  bash-completion,
