Build-depend on docbook-xml for the documentation DTD

--- a/debian/control
+++ b/debian/control
@@ -8,6 +8,7 @@ Uploaders:
 Build-Depends:
  bash-completion,
  debhelper (>= 10),
+ docbook-xml,
  docbook-xsl,
  libcap-dev,
  libselinux1-dev (>= 2.1.9),
