Use Perl rather than shell script for the autopkgtest test cases
This avoids needing the uncommon bats package, or writing shell scripts.

Also run the tests in a single batch, which is faster.

--- a/debian/tests/control
+++ b/debian/tests/control
@@ -1,23 +1,13 @@
 Tests:
  basic
  dev
- userns
-Restrictions: isolation-machine
-Depends:
- bats,
- bubblewrap,
-
-Tests:
  net
-Restrictions: isolation-machine
-Depends:
- bats,
- bubblewrap,
- iproute2,
-
-Tests:
  upstream
+ userns
 Restrictions: allow-stderr, isolation-machine
 Depends:
  bubblewrap,
+ iproute2,
+ libipc-run-perl,
+ perl,
  python,
