d/tests/upstream-as-root: Re-run upstream tests as root if allowed

--- a/debian/tests/control
+++ b/debian/tests/control
@@ -11,3 +11,13 @@ Depends:
  libipc-run-perl,
  perl,
  python,
+
+Tests:
+ upstream-as-root
+Restrictions: allow-stderr, isolation-machine, needs-root
+Depends:
+ bubblewrap,
+ iproute2,
+ libipc-run-perl,
+ perl,
+ python,
