--- a/debian/gbp.conf
+++ b/debian/gbp.conf
@@ -3,3 +3,4 @@ pristine-tar = True
 debian-branch = debian/master
 upstream-branch = upstream/latest
 patch-numbers = False
+upstream-vcs-tag = v%(version)s
