Build-depend on automake (>= 1.14.1)
This avoids the aptitude resolver used in backports sometimes deciding
to install automake1.11, which is not enough.

--- a/debian/control
+++ b/debian/control
@@ -6,6 +6,7 @@ Uploaders:
  Laszlo Boszormenyi (GCS) <gcs@debian.org>,
  Simon McVittie <smcv@debian.org>,
 Build-Depends:
+ automake (>= 1.14.1),
  bash-completion,
  debhelper (>= 10),
  docbook-xml,
