--- a/debian/control
+++ b/debian/control
@@ -20,6 +20,7 @@ Standards-Version: 4.1.1
 Homepage: https://github.com/projectatomic/bubblewrap
 Vcs-Git: https://anonscm.debian.org/git/collab-maint/bubblewrap.git
 Vcs-Browser: https://anonscm.debian.org/cgit/collab-maint/bubblewrap.git
+Rules-Requires-Root: no
 
 Package: bubblewrap
 Architecture: linux-any
