--- a/debian/control
+++ b/debian/control
@@ -18,8 +18,8 @@ Build-Depends:
  xsltproc,
 Standards-Version: 4.1.2
 Homepage: https://github.com/projectatomic/bubblewrap
-Vcs-Git: https://anonscm.debian.org/git/collab-maint/bubblewrap.git
-Vcs-Browser: https://anonscm.debian.org/cgit/collab-maint/bubblewrap.git
+Vcs-Git: https://salsa.debian.org/debian/bubblewrap.git
+Vcs-Browser: https://salsa.debian.org/debian/bubblewrap
 Rules-Requires-Root: no
 
 Package: bubblewrap
