Revert "d/control: Set Vcs-Git for experimental branch"
This reverts commit 988445d6c151ffd7cdb1a0bf47e1a000eb4a2b3b.

--- a/debian/control
+++ b/debian/control
@@ -18,7 +18,7 @@ Build-Depends:
  xsltproc,
 Standards-Version: 4.1.4
 Homepage: https://github.com/projectatomic/bubblewrap
-Vcs-Git: https://salsa.debian.org/debian/bubblewrap.git -b debian/experimental
+Vcs-Git: https://salsa.debian.org/debian/bubblewrap.git
 Vcs-Browser: https://salsa.debian.org/debian/bubblewrap
 Rules-Requires-Root: no
 
