Add a test to ensure that bubblewrap works on a /usr-merged system
This installs usrmerge inside the testbed, which is a destructive
package, so it is added with Restrictions: breaks-testbed.

--- a/debian/tests/control
+++ b/debian/tests/control
@@ -13,6 +13,17 @@ Depends:
  perl,
  python3,
 
+Tests: upstream-usrmerge
+Restrictions: allow-stderr, isolation-machine, breaks-testbed
+Depends:
+ bubblewrap,
+ iproute2,
+ libcap2-bin,
+ libipc-run-perl,
+ perl,
+ python3,
+ usrmerge
+
 Tests:
  upstream-as-root
 Restrictions: allow-stderr, isolation-machine, needs-root
