d/rules: Disable any active LD_PRELOAD hacks while running tests
These will typically assume a fully-featured OS (for example faketime
assumes sem_open() will work), but bubblewrap is a low-level tool that
temporarily operates in a container that is only partially functional
(for example /dev/shm isn't always mounted).

--- a/debian/rules
+++ b/debian/rules
@@ -23,3 +23,13 @@ else
 endif
 
 .PHONY: override_dh_fixperms
+
+override_dh_auto_test:
+ifeq (,$(filter nocheck,$(DEB_BUILD_OPTIONS)))
+	# Remove LD_PRELOAD so we don't run with faketime. It uses
+	# sem_open(), but bubblewrap runs in an environment where that
+	# can't work.
+	env -u LD_PRELOAD dh_auto_test
+endif
+
+.PHONY: override_dh_auto_test
