Use debhelper-compat 12
Temporarily disable dwz to facilitate use of diffoscope.

--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,7 @@ Uploaders:
 Build-Depends:
  automake (>= 1.14.1),
  bash-completion,
- debhelper (>= 10),
+ debhelper-compat (= 12),
  docbook-xml,
  docbook-xsl,
  libcap-dev,
