d/control: Canonicalize case of Multi-Arch

--- a/debian/control
+++ b/debian/control
@@ -24,7 +24,7 @@ Rules-Requires-Root: no
 
 Package: bubblewrap
 Architecture: linux-any
-Multi-arch: foreign
+Multi-Arch: foreign
 Depends:
  ${misc:Depends},
  ${shlibs:Depends},
