--- a/debian/control
+++ b/debian/control
@@ -28,8 +28,20 @@ Multi-Arch: foreign
 Depends:
  ${misc:Depends},
  ${shlibs:Depends},
+Recommends:
+ procps,
 Breaks:
  flatpak (<< 0.8.0-2~),
-Description: setuid wrapper for unprivileged chroot and namespace manipulation
- Core execution engine for unprivileged containers that works as a setuid
- binary on kernels without user namespaces.
+Description: utility for unprivileged chroot and namespace manipulation
+ bubblewrap uses Linux namespaces to launch unprivileged containers.
+ These containers can be used to sandbox semi-trusted applications such
+ as Flatpak apps, image/video thumbnailers and web browser components,
+ or to run programs in a different library stack such as a Flatpak runtime
+ or a different Debian release.
+ .
+ By default, this package relies on a kernel with user namespaces enabled.
+ Official Debian and Ubuntu kernels are suitable.
+ .
+ On kernels without user namespaces, system administrators can make the
+ bwrap executable setuid root, allowing it to create unprivileged
+ containers even though ordinary user processes cannot.
