--- a/debian/control
+++ b/debian/control
@@ -18,7 +18,7 @@ Build-Depends:
  xsltproc,
 Standards-Version: 4.5.1
 Homepage: https://github.com/containers/bubblewrap
-Vcs-Git: https://salsa.debian.org/debian/bubblewrap.git
+Vcs-Git: https://salsa.debian.org/debian/bubblewrap.git -b debian/experimental
 Vcs-Browser: https://salsa.debian.org/debian/bubblewrap
 Rules-Requires-Root: no
 
