--- a/debian/gbp.conf
+++ b/debian/gbp.conf
@@ -1,6 +1,6 @@
 [DEFAULT]
 pristine-tar = True
-debian-branch = debian/latest
-upstream-branch = upstream/latest
+debian-branch = debian/snapshots
+upstream-branch = upstream/snapshots
 patch-numbers = False
 upstream-vcs-tag = v%(version)s
