d/gbp.conf: Configure for noble

--- a/debian/gbp.conf
+++ b/debian/gbp.conf
@@ -1,6 +1,6 @@
 [DEFAULT]
 pristine-tar = True
-debian-branch = ppa/jammy
+debian-branch = ppa/noble
 upstream-branch = upstream/latest
 patch-numbers = False
 upstream-vcs-tag = v%(version)s
