d/gbp.conf: Configure tag naming convention as well as branch

--- a/debian/gbp.conf
+++ b/debian/gbp.conf
@@ -1,6 +1,7 @@
 [DEFAULT]
 pristine-tar = True
 debian-branch = ppa/noble
+debian-tag = ppa/%(version)s
 upstream-branch = upstream/latest
 patch-numbers = False
 upstream-vcs-tag = v%(version)s
